styles/header.css
@layer base {
	:root {
		--bar-width: 60px;
		--bar-height: 8px;
		--hamburger-gap: 1.5rem;
		--header-padding: 1rem;
		--hamburger-menu-animation-timing: 200ms ease-in-out;
		--hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
	}
}

@layer layouts {
	.header {
		display: flex;
		max-width: 1500px;
		margin-inline: auto;
		padding: var(--header-padding);
		justify-content: space-between;
		align-items: center;
	}

	.header-buttons {
		display: flex;
		gap: var(--hamburger-gap);
		align-items: center;

		@media (width <=820px) {
			display: none;
		}
	}

	.header-nav {
		display: contents;
		color: var(--dark-grey);
	}
}

@layer components {

	.brand-logo {
		display: flex;
		gap: .5rem;
		align-items: center;
		font-size: 1.5rem;
		font-weight: 600;
		color: var(--secondary-color);

		svg {
			height: 1rem;
		}
	}

	.hamburger-menu {
		--x-width: calc(var(--hamburger-height) * 1.41421356237);

		display: flex;
		flex-direction: column;
		gap: var(--hamburger-gap);
		z-index: 100;
		cursor: pointer;
		gap: .5rem;
	}

	.hamburger-menu::before,
	.hamburger-menu::after,
	.hamburger-menu input {
		content: "";
		width: var(--bar-width);
		height: var(--bar-height);
		background-color: var(--black);
		border-radius: 9999px;
		transition: opacity var(--hamburger-menu-animation-timing), width var(--hamburger-menu-animation-timing);
		transform-origin: left center;
	}

	.hamburger-menu input {
		appearance: none;
		padding: 0;
		margin: 0;
		outline: none;
		pointer-events: none;
	}

	.hamburger-menu input:checked {
		opacity: 0;
		width: 0;
	}

	.hamburger-menu:has(input:checked)::before {
		rotate: 45deg;
	}

	.hamburger-menu:has(input:checked)::after {
		rotate: -45deg;
	}
}

